--- a/content/intro.tex
+++ b/content/intro.tex
@@ -1,1 +1,11 @@
 \chapter{Einleitung}\label{cha:einleitung}
+
+\input{content/intro/einleitung}
+
+\chapter{Aufgabenstellung}\label{cha:aufgabe}
+
+\input{content/intro/aufgabenstellung}
+
+\chapter{Stand der Technik}\label{cha:stand}
+
+\input{content/intro/standDerTechik}
