--- a/settings/packages.tex
+++ b/settings/packages.tex
@@ -4,6 +4,11 @@
 \usepackage[ngerman]{babel}
 \usepackage{setspace}
 
+% Literatur
+\usepackage[babel,german=guillemets]{csquotes}
+\usepackage[backend=biber]{biblatex}
+\bibliography{literature}
+
 % Grafik
 \usepackage{graphicx}
 
